# ros_project_submision

./: .gitignore  README.md
code/new_mobile_robot/: CMakeLists.txt  package.xml
code/new_mobile_robot/Solidworks/: base_link.SLDPRT  left_back_wheel.SLDPRT  left_front_wheel.SLDPRT  new_mobile_robot.SLDASM  right_back_wheel.SLDPRT  right_front_wheel.SLDPRT
code/new_mobile_robot/config/: circle_pid.rviz  light_nav2.rviz  nav2_params.yaml  nav2_params_backup_before_door_fix.yaml  pid_sequence.rviz  slam_view.rviz
code/new_mobile_robot/launch/: all_in_one.launch.py  apartment.launch.py  apartment_headless.launch.py  gazebo.launch.py  sim.launch.py
code/new_mobile_robot/meshes/: base_link.STL  left_back_wheel.STL
code/new_mobile_robot/scripts/: autonomous_nav_demo.py  center_to_room_nav.py  circle_pid_controller.py  cleaning_tracker.py  pid_sequence_controller.py  simple_p_controller.py
code/new_mobile_robot/urdf/: new_mobile_robot.urdf
code/new_mobile_robot/worlds/: apartment.world  apartment_old_blocks_backup.world
docs/: WORKFLOW.md
maps/: apartment_map_final.pgm  apartment_map_final.yaml
